fix legal contract status log fix spacing between list items (docs/legal contracts) fix tooltip issue on PL -> PO

--- a/src/app/shared/styles/material/mat-button.scss
+++ b/src/app/shared/styles/material/mat-button.scss
@@ -47,6 +47,7 @@
     font-weight: 700;
     padding-left: 0px !important;
     font-size: 14px;
+    line-height: 40px !important;
     .mat-button-wrapper {
         display: flex;
         align-items: center;
